--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@astrojs/mdx": "^2.1.1",
     "astro": "^4.15.3",
-    "astro-imagetools": "^0.9.0"
+    "astro-imagetools": "^0.9.0",
+    "firebase": "^9.22.0"
+
   }
 }
