--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@astrojs/mdx": "^2.1.1",
     "astro": "^4.15.3",
     "astro-imagetools": "^0.9.0",
-    "firebase": "^9.22.0"
+    "firebase": "^10.0.0",
+    "@astrojs/react": "^3.0.0"
 
   }
 }
