--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
   "dependencies": {
     "@astrojs/mdx": "^2.1.1",
     "astro": "^4.15.3",
-    "astro-imagetools": "^0.9.0",
-    "firebase": "^10.0.0",
-    "@astrojs/react": "^3.0.0"
-
+    "astro-imagetools": "^0.9.0"
   }
 }
